--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["dbpath", "deidelma", "gohtml", "notaconfig", "stretchr"]
+  "cSpell.words": [
+    "dbpath",
+    "deidelma",
+    "gohtml",
+    "goland",
+    "notaconfig",
+    "stretchr"
+  ]
 }
