--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,12 @@
   "cSpell.words": [
     "dbpath",
     "deidelma",
+    "eliben",
     "gohtml",
     "goland",
     "notaconfig",
-    "stretchr"
+    "progname",
+    "stretchr",
+    "zerolog"
   ]
 }
